syntax = "proto3";

package user;

option go_package = "go-clean-ddd-es-template/proto/user";

import "google/api/annotations.proto";

// User service definition
service UserService {
  // Create a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }

  // Get user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{id}"
    };
  }

  // Update user
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      put: "/api/v1/users/{id}"
      body: "*"
    };
  }

  // Delete user
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/api/v1/users/{id}"
    };
  }

  // List all users
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }
}

// User entity
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string created_at = 4;
  string updated_at = 5;
}

// CreateUserRequest
message CreateUserRequest {
  string email = 1;
  string name = 2;
}

// CreateUserResponse
message CreateUserResponse {
  User user = 1;
}

// GetUserRequest
message GetUserRequest {
  string id = 1;
}

// GetUserResponse
message GetUserResponse {
  User user = 1;
}

// UpdateUserRequest
message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
}

// UpdateUserResponse
message UpdateUserResponse {
  User user = 1;
}

// DeleteUserRequest
message DeleteUserRequest {
  string id = 1;
}

// DeleteUserResponse
message DeleteUserResponse {
  bool success = 1;
}

// ListUsersRequest
message ListUsersRequest {
  // Add pagination parameters if needed
}

// ListUsersResponse
message ListUsersResponse {
  repeated User users = 1;
} 